+ Added: [#2422] player info menu
- Fixed: [#2422] missing player self failure response for bedrock forms