@@ -1,2 +1,14 @@
++ Improved: Internal region and claim logic. This is expecially useful for servers that have tens of thousands of lands.
++ Improved: Intenal claim and unclaim management
+
 + Added: [#2422] player info menu
++ Added: [Suggestion] fly reactivate permission
+    # Set a permission to check before Lands reactivates flight for a player.
+    # Lands only reactivates flight, if Lands previously disabled it for the player and they're now allowed to fly again
+    # at their current location. This permission just adds another requirement, besides the fly role flag.
+    reactivate-perm: ''
+
++ Added: [Suggestion] /lands list [category]
++ Added: SkinsRestorer support
 - Fixed: [#2422] missing player self failure response for bedrock forms
+- Fixed: [#2400] Player skulls not updating immediately
